[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/ship/ship.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ship/ship_navigation.gd" type="Script" id=2]
[ext_resource path="res://src/friendly_ship/friendly_ship.gd" type="Script" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 423.001

[node name="FriendlyShip" groups=["friendly"] instance=ExtResource( 1 )]
collision_layer = 144
collision_mask = 198
script = ExtResource( 9 )

[node name="ShipNavigation" type="Node2D" parent="." index="9"]
script = ExtResource( 2 )
debug = false
look_ahead = 200

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="." index="10"]
visible = false
rect = Rect2( -15, -15, 30, 30 )

[node name="EnemyDetector" type="Area2D" parent="." index="11"]
collision_layer = 0
collision_mask = 6
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector" index="0"]
position = Vector2( 60, 0 )
shape = SubResource( 1 )

[connection signal="death" from="." to="." method="_on_FriendlyShip_death"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
